Добавлен контроллер BaseController, который переопределяет метод стандартного класса Controller - ExecuteCore. Все остальные контроллеры енобходимо наследовать от него.
Добавлен элемент глобализации с двумя языками Eng и Рус, с помоощью стандартных средств и файлов resx.

--- a/eSocium.Web/eSocium.Web/Content/Site.css
+++ b/eSocium.Web/eSocium.Web/Content/Site.css
@@ -146,6 +146,11 @@ footer {
         padding: 2px 3px;
         text-decoration: none;
     }
+    
+    #login div.lang-picker-wrapper
+    {
+        margin: 10px 0px;
+    }
 
     #login a.username {
         background: none;
