--- a/eSocium.Web/eSocium.Web/Views/Home/Index.cshtml
+++ b/eSocium.Web/eSocium.Web/Views/Home/Index.cshtml
@@ -2,14 +2,14 @@
     ViewBag.Title = "e-Socium";
 }
 <h1>
-    Главная страница</h1>
+    @Globalization.Homepage</h1>
 
 @if (User.Identity.IsAuthenticated)
 {
     <div style="margin-top: 15px;">
-        Вы вошли как <b>@User.Identity.Name</b></div>
+        @Globalization.Hello, <b>@User.Identity.Name</b></div>
     if (User.IsInRole("Администратор"))
     {
-        <div>У вас права администратора</div>
+        <div> @Globalization.AdminRoleMessage</div>
     }
 }
