Добавлены классы для открытых вопросов. OpenPollController - основной контроллер раздела (обрабатывает запрос на список опросов, каждый опрос в отдельности, etc), OpenQuestionController - контроллер вопросов (обрабатывает запрос на создание нового и просмотр старого). В файле Poll.cs - описание модели + класс парсера вопросов из xlsx.
Страница создания нового вопроса требует загрузки xlsx файла, в котором содержится вопрос. Пока допустимы два формата входных данных.
1. "два столбца, в первом - id респондентов, во втором - ответы на вопрос". В этом случае введённая формулировка и метка используются по прямому назначению.
2. Набор столбцов с заголовком. В этом случае метка вопроса остаётся пустой, а формулировки считываются из заголовка. Js-валидатор не отключается, так что что-то вбить в поля метки и названия всё равно придётся.

Проверки на уникальность вопроса/ответа не выполняется.

Известные баги
1. Не работает удаление опроса (какие-то непонятки с зависимостями в БД).
2. Сообщения об ошибках при загрузке файла  выводятся с номером строки в исходниках. Я так понимаю, что где-то это отключается.

--- a/eSocium.Web/eSocium.Web/Views/Shared/_Layout.cshtml
+++ b/eSocium.Web/eSocium.Web/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                 </section>
                 <nav>
                     <ul id="menu">
-                        <li>@Html.ActionLink(Globalization.OpenQuestions, "Index", "Open")</li>
+                        <li>@Html.ActionLink(Globalization.OpenQuestions, "Index", "OpenPoll")</li>
                         <li>@Html.ActionLink(Globalization.Dictionary, "Index", "Dictionary")</li>
                     </ul>
                 </nav>
