Globalization on some pages

--- a/eSocium.Web/eSocium.Web/Views/Dictionary/Index.cshtml
+++ b/eSocium.Web/eSocium.Web/Views/Dictionary/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewBag.Title = "Словарь";
+    ViewBag.Title = Globalization.Dictionary;
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Словарь</h1>
+<h1>@Globalization.Dictionary</h1>
