--- a/eSocium.Web/eSocium.Web/Views/OpenPoll/Index.cshtml
+++ b/eSocium.Web/eSocium.Web/Views/OpenPoll/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<eSocium.Web.Models.OpenQuestions.Poll>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = Globalization.OpenQuestions;
 }
 
-<h2>Index</h2>
+<h2>@Globalization.OpenQuestions</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
