--- a/eSocium.Web/eSocium.Web/Views/Account/Login.cshtml
+++ b/eSocium.Web/eSocium.Web/Views/Account/Login.cshtml
@@ -12,8 +12,11 @@
 <script src="~/Scripts/jquery.validate.min.js" type="text/javascript"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js" type="text/javascript"></script>
 
-@using (Html.BeginForm((string)ViewBag.FormAction, "Account")) {
-    @Html.ValidationSummary(true, "Log in was unsuccessful. Please correct the errors and try again.")
+@using (
+    Html.BeginForm((string)ViewBag.FormAction, "Account")
+    )
+{
+    @Html.ValidationSummary(false, "Log in was unsuccessful. Please correct the errors and try again.")
 
     <fieldset>
         <legend>Log in Form</legend>
@@ -39,4 +42,4 @@
     <p>
         @Html.ActionLink("Register", "Register") if you don't have an account.
     </p>
-}
+} @*end of form*@
