--- a/eSocium.Web/eSocium.Web/Views/OpenPoll/Create.cshtml
+++ b/eSocium.Web/eSocium.Web/Views/OpenPoll/Create.cshtml
@@ -6,8 +6,8 @@
 
 <h2>Create</h2>
 
-<script src="@Url.Content("~/Scripts/jquery.validate.min.js")"></script>
-<script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")"></script>
+<script type="text/jscript" language="jscript" src="@Url.Content("~/Scripts/jquery.validate.min.js")"></script>
+<script type="text/jscript" language="jscript" src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")"></script>
 
 @using (Html.BeginForm()) {
     @Html.ValidationSummary(true)
