--- a/eSocium.Web/eSocium.Web/Views/OpenQuestion/Edit.cshtml
+++ b/eSocium.Web/eSocium.Web/Views/OpenQuestion/Edit.cshtml
@@ -9,7 +9,8 @@
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")"></script>
 
-@using (Html.BeginForm()) {
+@using (Html.BeginForm())
+{
     @Html.ValidationSummary(true)
 
     <fieldset>
@@ -18,26 +19,27 @@
         @Html.HiddenFor(model => model.QuestionId)
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Form)
+            @Html.LabelFor(model => model.Wording)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Form)
-            @Html.ValidationMessageFor(model => model.Form)
+            @Html.EditorFor(model => model.Wording)
+            @Html.ValidationMessageFor(model => model.Wording)
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Mark)
+            @Html.LabelFor(model => model.Label)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Mark)
-            @Html.ValidationMessageFor(model => model.Mark)
+            @Html.EditorFor(model => model.Label)
+            @Html.ValidationMessageFor(model => model.Label)
         </div>
 
         <p>
-            <input type="submit" value="Save" />
+            <input type="submit" value="Save changes" />
+            <input type="reset" value="Reset values" />
         </p>
     </fieldset>
-}
+} @* end of form *@
 
 <div>
     @Html.ActionLink("Back to Poll", "Details", "OpenPoll", new { id = Model.Poll.PollId }, null)
